# fastapi_zero_deploy

./: pyproject.toml
tests/: test_app.py
